--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en"> 
 <head>
 	<meta char="UTF-8"> 
-	<title>Victoria Yuen-Ruan</title>
+	<title>Victoria Yuen-Ruan| Under Construction</title>
+
+	<style>
+	body{
+		position:fixed;
+		width:635px;
+	    left: 50%;
+	    top: 50%; 
+	    margin-left: -300px;
+	    margin-top: -300px;
+		
+
+	}
+	</style>
 </head>
 <body>
-Under Construction!
+<img src="underconstruction.png"/>
 </body>
 </html>
