Herbarium Project Page Update
Ver1 of the Herbarium Project Page is Up!

--- a/html/graphics.html
+++ b/html/graphics.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Design portoflio and works by Victoria Yuen-Ruan.">
+    <meta name="keywords" content="graphic design, portfolio, web design, student, work" />
+    <meta name="author" content="Victoria Yuen-Ruan">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>INSTANT - Bootstrap Theme</title>
+    <title>Victoria Yuen-Ruan | Graphics</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="../assets/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../assets/css/style.css" rel="stylesheet">
+    <link href="../assets/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -39,13 +39,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">INSTANT</a>
+			<a class="navbar-brand" href="index.html">VICTORIA YUEN-RUAN</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li class="active"><a href="../index.html">Home</a></li>
             <li><a href="#works">Works</a></li>
+            <li><a href="about.html">About</a></li>   
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -56,74 +56,76 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<h4>NEW WEBSITE FOR</h4>
-					<h1>INSTANT</h1>
-					<h4>ROLE: LEAD DESIGNER</h4>
+					<h4>Assorted visuals and</h4>
+					<h1>Graphics</h1>
+					<h4>Graphic - Illustration</h4>
 				</div>
-			</div><! --/row -->
+			</div><!--/row -->
 	    </div> <!-- /container -->
-	</div><! --/workwrap -->
+	</div><!--/workwrap -->
 	
 	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h4>ABOUT THE PROJECT</h4>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+				<h4>ABOUT</h4>
+				<p>My employer, the UC Davis Center For Plant Diversity AKA the Herbarium, has asked me to distribute media to reach out to students and other members of the Davis Community. The Herbarium has various events throughout the year and mainly publicizes within the Plant Sciences Department. It's my responsibility to optimize their online presence. Eventually I will help them redesign their website. </p>
 			</div>
+			<div class="fix">
 			<div class="col-lg-10 col-lg-offset-1 mt">
-				<img class="img-responsive" src="assets/img/pr01.jpg">
-				<br>
-				<img class="img-responsive" src="assets/img/pr02.jpg">
+				<img class="img-responsive" src="../assets/img/herbarium/bioday.jpg" width="503" height="650" > 
+				<img class="img-responsive" src="../assets/img/herbarium/teainvite.jpg" width="503" height="687.5">
+				<img class="img-responsive" src="../assets/img/herbarium/volunteersunday.jpg" > 
+
+			</div>
 			</div>
 
-		</div><! --/row -->
-	</div><! --/container -->
+		</div><!--/row -->
+	</div><!--/container -->
 	
 	<div id="social">
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-dribbble"></i></a>
+					<a href="#"><i class="fa fa-behance"></i></a>
+				</div>
+				
+				<div class="col-lg-2">
+					<a href="https://dribbble.com/yuenruan"><i class="fa fa-dribbble"></i></a>
+				</div>
+				 
+				<div class="col-lg-2">
+					<a href="http://twitter.com/yuenruan"><i class="fa fa-twitter"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-facebook"></i></a>
+					<a href="https://www.linkedin.com/pub/victoria-yuen-ruan/58/776/5a4"><i class="fa fa-linkedin"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-twitter"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-linkedin"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-instagram"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-tumblr"></i></a>
+					<a href="thellamawentmeow.tumblr.com"><i class="fa fa-tumblr"></i></a>
 				</div>
 			
-			</div><! --/row -->
-		</div><! --/container -->
-	</div><! --/social -->
+			</div><!--/row -->
+		</div><!--/container -->
+	</div><!--/social -->
 
 	<div id="footerwrap">
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-4">
-					<p><b>WEB DESIGNER, DEVELOPER & GAME ADDICT</b></p>
+					<p><b>Davis, CA</b></p>
 				</div>
 			
 				<div class="col-lg-4">
-					<p>Living in the amazing London.</p>
+					<p><a href="http://goo.gl/YHZaz5">Resumé</a></p>
 				</div>
 				<div class="col-lg-4">
-					<p>hello@instant.com</p>
+					<p>vyuenruan@ucdavis.edu</p>
 				</div>
 			
 			</div>
 		
 		</div>
-	</div><! --/footerwrap -->
+	</div><!--/footerwrap -->
 	
 
 
