Graphics Project Page Update
Version 1 of Graphics Project Page completed!

--- a/html/graphics.html
+++ b/html/graphics.html
@@ -69,13 +69,21 @@
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h4>ABOUT</h4>
-				<p>My employer, the UC Davis Center For Plant Diversity AKA the Herbarium, has asked me to distribute media to reach out to students and other members of the Davis Community. The Herbarium has various events throughout the year and mainly publicizes within the Plant Sciences Department. It's my responsibility to optimize their online presence. Eventually I will help them redesign their website. </p>
+				<p>These are assorted graphics I've made in my spare time for various purposes. </p>
 			</div>
-			<div class="fix">
+			<div class="graph">
 			<div class="col-lg-10 col-lg-offset-1 mt">
-				<img class="img-responsive" src="../assets/img/herbarium/bioday.jpg" width="503" height="650" > 
-				<img class="img-responsive" src="../assets/img/herbarium/teainvite.jpg" width="503" height="687.5">
-				<img class="img-responsive" src="../assets/img/herbarium/volunteersunday.jpg" > 
+
+				<img class="img-responsive" src="../assets/img/graphics/construction.png">
+				<br>
+				<p> <strong>This</strong> was the landing page you'd see when my site was under construction. The girl is one of many attempts to brand myself. I think it may have potential because my strength in illustration is in depicting people. It is a good representation of what I enjoy doing, but I do not feel like it's the best representation of my brand identity yet. </p>
+
+				<img class="img-responsive" src="../assets/img/graphics/cubes.png" >
+				<br>
+				<p> <strong>I played with the idea</strong> of a cube representing my different strengths as another way to brand myself. I think I need to do more research on branding. I did different color variations, but I feel that the first one with a teal background has the best contrast.</p>
+				<img class="img-responsive" src="../assets/img/graphics/dolls.jpg"> 
+				<br> 
+				<p><strong> I used to illustrate</strong> my daily outfits with marker and pencil. After learning Illustrator, I wanted to continue journaling my wardrobe with a uniform doll I made in Illustrator. Here I've made several different hairstyles. I plant to change the body proportions so that all the dolls look unified even with the different outfits. </p> 
 
 			</div>
 			</div>
