--- a/html/herbarium.html
+++ b/html/herbarium.html
@@ -80,7 +80,7 @@
 				<br>
 				<img class="img-responsive" src="../assets/img/herbarium/teainvite.jpg" width="503" height="687.5">
 				<br>
-				<p>The Winter Botanical Tea is an annual event hosted by the Herbarium celebrating a different plant collection each year. I designed this with the intention of printing it as an invitation card to the friends of the Herbarium. In this iteration, I used the serifs font for an elegant look to match a mature audience that would be attending. The contrast with the bold sans serif "Winter Botanical Tea" is done for clarity. </p>
+				<p><strong>The Winter Botanical Tea</strong> is an annual event hosted by the Herbarium celebrating a different plant collection each year. I designed this with the intention of printing it as an invitation card to the friends of the Herbarium. In this iteration, I used the serifs font for an elegant look to match a mature audience that would be attending. The contrast with the bold sans serif "Winter Botanical Tea" is done for clarity. </p>
 				<br>
 				<img class="img-responsive" src="../assets/img/herbarium/volunteersunday.jpg" > 
 				<br>
