Redwood Grove Project Page Update
I updated the content of the Explore It Project page v1

--- a/html/herbarium.html
+++ b/html/herbarium.html
@@ -84,7 +84,7 @@
 				<br>
 				<img class="img-responsive" src="../assets/img/herbarium/volunteersunday.jpg" > 
 				<br>
-				<p>This Faceboook flyer I made for the Herbarium Facebook page is one of the first things I made outside of class after taking my first graphic design class. It acts as a reminder that we have an event coming up, so any further details for the event is posted in the Facebook description instead of directly on the flier. If I had a chance to re-do this flier, I would not overlay "Volunteer Sunday Afternoons" over the background photo as it is difficult to read. 
+				<p><strong>This Faceboook flyer I made </strong>for the Herbarium Facebook page is one of the first things I made outside of class after taking my first graphic design class. It acts as a reminder that we have an event coming up, so any further details for the event is posted in the Facebook description instead of directly on the flier. If I had a chance to re-do this flier, I would not overlay "Volunteer Sunday Afternoons" over the background photo as it is difficult to read. 
 				</p>
 
 			</div>
