Tea Service Project Page Update
Updated with descriptions and images of my work ver1

--- a/html/asa.html
+++ b/html/asa.html
@@ -80,7 +80,7 @@
 				<br>
 				<img class="img-responsive" src="../assets/img/asa/asafinal.png">
 				<br>
-				<p><strong>When I think of resistance and protest</strong> I think of solidarity and all the images of people throwing up their fists or linking arms, etc. I played with different hand arrangements and went with a rough idea of joining hands without literally having the hands joined together.</p>
+				<p><strong>When I think of resistance and protest</strong> I think of solidarity and all the images of people throwing up their fists or linking arms, etc. I played with different hand arrangements and went with a rough idea of joining hands without literally having the hands joined together. The hands are instead joined by the two colored triangles in the center. </p>
 				<br>
 
 			</div>
