Clothing App Project Page Update
WIP photos and descriptions added to page.

--- a/html/teaservice.html
+++ b/html/teaservice.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Design portoflio and works by Victoria Yuen-Ruan.">
     <meta name="keywords" content="graphic design, portfolio, web design, student, work" />
     <meta name="author" content="Victoria Yuen-Ruan">
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
+    <link rel="shortcut icon" href="../assets/ico/favicon.ico">
 
     <title>Victoria Yuen-Ruan | Tea in Davis</title>
 
@@ -147,6 +147,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
   </body>
 </html>
