Link to clothing app project page available
update it now!

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				<a href="html/graphics.html"><img src="assets/img/portfolio/graphics_myfolio.png" class="img-responsive"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/closet_myfolio.png" class="img-responsive"></a>
+				<a href="html/clothingapp.html"><img src="assets/img/portfolio/closet_myfolio.png" class="img-responsive"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="html/photography.html"><img src="assets/img/portfolio/allegra_myfolio.jpg" class="img-responsive"></a>
