Work wrap bg change
Updated the #workwrap background to something I photographed. HOW DO I
CHANGE EACH INDIVIDUALPROJECT HEADER BACKGROUND

--- a/html/herbarium.html
+++ b/html/herbarium.html
@@ -72,7 +72,7 @@
 				<p>My employer, the UC Davis Center For Plant Diversity AKA the Herbarium, has asked me to distribute media to reach out to students and other members of the Davis Community. The Herbarium has various events throughout the year and mainly publicizes within the Plant Sciences Department. It's my responsibility to optimize their online presence. Eventually I will help them redesign their website. </p>
 				
 			</div>
-			<div class="fix">
+			<div class="grove">
 			<div class="col-lg-10 col-lg-offset-1 mt">
 				<img class="img-responsive" src="../assets/img/herbarium/bioday.jpg" width="503" height="650" > 
 				<br>
