--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="#works">Works</a></li>
-            <li><a href="about.html">About</a></li>   
+            <li ><a href="index.html">Home</a></li>
+            <li ><a href="#works">Works</a></li>
+            <li ><a href="about.html">About</a></li>   
           </ul>
         </div><!--/.nav-collapse -->
       </div>
