Partial Alt Description Update
Added alt text descriptions to most of my project pages.

--- a/html/asa.html
+++ b/html/asa.html
@@ -75,11 +75,11 @@
 			</div>
 			<div class="grove">
 			<div class="col-lg-10 col-lg-offset-1 mt">
-				<img class="img-responsive" src="../assets/img/asa/asapreliminary.jpg" > 
+				<img class="img-responsive" src="../assets/img/asa/asapreliminary.jpg" alt="first poster design for ASA poster contest"> 
 				<br>
 				<p><strong>I titled this work as "Intersections".</strong> The professors of the department agreed that my work was compositionally pleasing but did not feel that they identified with it. They encouraged me that in my re-design that I should develop the folding shapes to better represent ASA history as one of protest and resistance. At that point I realized I did not fully understand the history of ASA. I interviewed a friend in the ASA major who gave me a crash course on how ASA started as a coalition at SF State which grew out of anger and discontent. </p>
 				<br>
-				<img class="img-responsive" src="../assets/img/asa/asafinal.png">
+				<img class="img-responsive" src="../assets/img/asa/asafinal.png" alt="final poster design for ASA poster contest">
 				<br>
 				<p><strong>When I think of resistance and protest</strong> I think of solidarity and all the images of people throwing up their fists or linking arms, etc. I played with different hand arrangements and went with a rough idea of joining hands without literally having the hands joined together. The hands are instead joined by the two colored triangles in the center. </p>
 				<br>
