--- a/html/clothingapp.html
+++ b/html/clothingapp.html
@@ -74,11 +74,11 @@
 			</div>
 			<div class="grove">
 			<div class="col-lg-10 col-lg-offset-1 mt">
-				<img class="img-responsive" src="../assets/img/clothingapp/sketch1.jpg" > 
+				<img class="img-responsive" src="../assets/img/clothingapp/sketch1.jpg" alt="Photo of sketches for mobile application" > 
 				<br>
 				<p><strong>I apologize.</strong> I just realized I should have used a different lens when I took this picture. Woops. I was mostly playing around with what the interface would look like. The home screen would display the date and weather and clothing suggestions based on the weather. The difference between this and most common closet apps is that there are no photographs. All the clothing items are vector graphics. I want to be design an easily manipulated set of standard clothing items that can be placed on your avatar to represent you and your clothing items. The more outfits you make, the more points you gain. Points go toward getting customized clothing items since some items will be too difficult to make.</p>
 				<br>
-				<img class="img-responsive" src="../assets/img/clothingapp/sketch2.jpg">
+				<img class="img-responsive" src="../assets/img/clothingapp/sketch2.jpg" alt="Another photo of sketches for mobile application">
 				<br>
 				<p><strong>I played with</strong> the idea of a side scroll for each clothing category to represent the closet. There could be a calendar view to see what you wore on which day as well. I am still in the process of working on this, and hope to create a prototype by summer 2015.
 				<br>
