--- a/html/herbarium.html
+++ b/html/herbarium.html
@@ -74,15 +74,15 @@
 			</div>
 			<div class="grove">
 			<div class="col-lg-10 col-lg-offset-1 mt">
-				<img class="img-responsive" src="../assets/img/herbarium/bioday.jpg" width="503" height="650" > 
+				<img class="img-responsive" src="../assets/img/herbarium/bioday.jpg" width="503" height="650" alt="Biodiversity Museum Day Poster Design"> 
 				<br>
 				<p><strong>The Biodiversity Museum Day</strong> is an event targeted towards families to encourage children to be involved in the sciences. On this day, 6 collections and museums open up at UC Davis and there are activities and tours to participate in. I wanted the poster to be kid-friendly and exciting with all the vibrant colors. I chose not incorporate the map of the locations on this poster, and have left it as a separate resource that can be printed and used on the day of the event. </p>
 				<br>
-				<img class="img-responsive" src="../assets/img/herbarium/teainvite.jpg" width="503" height="687.5">
+				<img class="img-responsive" src="../assets/img/herbarium/teainvite.jpg" width="503" height="687.5" alt="Winter Tea at the Herbarium invitation design">
 				<br>
 				<p><strong>The Winter Botanical Tea</strong> is an annual event hosted by the Herbarium celebrating a different plant collection each year. I designed this with the intention of printing it as an invitation card to the friends of the Herbarium. In this iteration, I used the serifs font for an elegant look to match a mature audience that would be attending. The contrast with the bold sans serif "Winter Botanical Tea" is done for clarity. </p>
 				<br>
-				<img class="img-responsive" src="../assets/img/herbarium/volunteersunday.jpg" > 
+				<img class="img-responsive" src="../assets/img/herbarium/volunteersunday.jpg" alt="Facebook volunteer flyer for Herbarium"> 
 				<br>
 				<p><strong>This Faceboook flyer I made </strong>for the Herbarium Facebook page is one of the first things I made outside of class after taking my first graphic design class. It acts as a reminder that we have an event coming up, so any further details for the event is posted in the Facebook description instead of directly on the flier. If I had a chance to re-do this flier, I would not overlay "Volunteer Sunday Afternoons" over the background photo as it is difficult to read. 
 				</p>
