--- a/html/photography.html
+++ b/html/photography.html
@@ -75,15 +75,15 @@
 			</div>
 			<div class="grove">
 			<div class="col-lg-10 col-lg-offset-1 mt">
-				<img class="img-responsive" src="../assets/img/portraits/allegra.jpg" > 
+				<img class="img-responsive" src="../assets/img/portraits/allegra.jpg" alt="Photo of a friend laughing while holding a cat" > 
 				<br>
-				<img class="img-responsive" src="../assets/img/portraits/holly.jpg">
+				<img class="img-responsive" src="../assets/img/portraits/holly.jpg" alt="photo of a friend walking by a painting at the Ghetty">
 				<br>
-				<img class="img-responsive" src="../assets/img/portraits/suzanne.jpg">
+				<img class="img-responsive" src="../assets/img/portraits/suzanne.jpg" alt="photo of a friend smirking at the camera">
 				<br>
-				<img class="img-responsive" src="../assets/img/portraits/aman.jpg">
+				<img class="img-responsive" src="../assets/img/portraits/aman.jpg" alt="photo of a friend somberly holding a chicken">
 				<br>
-				<img class="img-responsive" src="../assets/img/portraits/amanda.jpg">
+				<img class="img-responsive" src="../assets/img/portraits/amanda.jpg" alt="photo of a friend trying to walk a drink wanter out of a glass">
 
 			</div>
 			</div>
