--- a/html/redwoodgrove.html
+++ b/html/redwoodgrove.html
@@ -74,7 +74,7 @@
 			</div>
 			<div class="grove">
 			<div class="col-lg-10 col-lg-offset-1 mt">
-				<img class="img-responsive" src="../assets/img/redwood/2.jpg" > 
+				<img class="img-responsive" src="../assets/img/redwood/2.jpg" alt="website screenshot of redwoodgrove"> 
 				<br>
 				<img class="img-responsive" src="../assets/img/redwood/3.jpg">
 				<br>
