About page update
My About Me was lacking. I need to let people know WHO I AM.

--- a/about.html
+++ b/about.html
@@ -63,11 +63,30 @@
 	</div><!--/aboutwrap -->
 	
 	<div class="container">
-		<div class="row centered mt mb">
+		<div class="row mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h2>VICTORIA YUEN-RUAN</h2>
-				<p>Victoria is currently a design student at UC Davis. She loves to make graphics and design interactive layouts for web and mobile. She aspires to be a UX designer so that users will be attracted to come back again, instead of setting their laptop on fire after they clicked the home button and got redirected to the "BUY THIS APP NOW" page and then proceeded to be inundated with malware viruses.</p>
-				<p>In her spare time she draws her daily outfits, takes romantic bike rides by herself as the sun sets, and goes out to Sacramento to thrift for more clothes. She is currently on Codecademy learning Javascript because her current web design class supposedly bars her from learning it before the "advanced" web design class.</p>
+				<p>Hello! I'm currently a design student at UC Davis exploring visual communication and experience design. I love creating graphics and hope to make the world less frustrating with one design solution at a time. </p>
+				<p>What are my Current goals? 
+					<ul>
+						<li>Understand the principles of human-centered design</li>
+						<li>Make a CSS animation!</li> 
+						<li>Meet Sal Khan (I love Khanacademy *o*)</li>
+						<li>USE DESIGN FOR GOOD, AND NOT "EVIL"</li>
+					</ul>
+				</p>
+				<p>When I'm not attached to my laptop and external monitor, I spend my time drawing people in clothes I wish I had, taking romantic bike rides by myself as the sun sets, and driving out to Sacramento to thrift for more clothes. If my broke college-kid lifestyle allowed me to, I'd be trying new food places across the Sacramento region.</p>
+				<p>My favorite tools?
+					<ul>
+						<li>Adobe Photoshop and Illustrator</li>
+						<li>Sublime Text</li>
+						<li>Pentel Graph600 Drafting Pencil</li>
+						<li>Any sketchbook I can get my hands on</li>
+						<li>Casa Okinawa Instant Milk Tea</li>
+					</ul>
+				</p>
+				<p>If you have any inquiries, feelings, need for a midnight burger run, please contact me at vyuenruan@ucdavis.edu</p>
+
 			
 			</div>
 
