--- a/about.html
+++ b/about.html
@@ -72,10 +72,10 @@
 						<li>Understand the principles of human-centered design</li>
 						<li>Make a CSS animation!</li> 
 						<li>Meet Sal Khan (I love Khanacademy *o*)</li>
-						<li>USE DESIGN FOR GOOD, AND NOT "EVIL"</li>
+						<li>USE DESIGN FOR GOOD, AND NOT EVIL</li>
 					</ul>
 				</p>
-				<p>When I'm not attached to my laptop and external monitor, I spend my time drawing people in clothes I wish I had, taking romantic bike rides by myself as the sun sets, and driving out to Sacramento to thrift for more clothes. If my broke college-kid lifestyle allowed me to, I'd be trying new food places across the Sacramento region.</p>
+				<p>When I'm not attached to my laptop and external monitor, I spend my time drawing people in clothes I wish I had, taking romantic bike rides by myself as the sun sets, and driving out to Sacramento to thrift for more clothes. Some things that I'm passionate about are fashion, providing free education, maintaining good health, and the future of technology.  </p>
 				<p>My favorite tools?
 					<ul>
 						<li>Adobe Photoshop and Illustrator</li>
