About page update
I’ll never be happy with this page =___=  JUST KNOW IM REALLY GREAT TO
WORK WITH, OK? <3

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 						<li>USE DESIGN FOR GOOD, AND NOT EVIL</li>
 					</ul>
 				</p>
-				<p>When I'm not attached to my laptop and external monitor, I spend my time drawing people in clothes I wish I had, taking romantic bike rides by myself as the sun sets, and driving out to Sacramento to thrift for more clothes. Some things that I'm passionate about are fashion, providing free education, maintaining good health, and the future of technology.  </p>
+				<p>When I'm not attached to my laptop and external monitor, I spend my time drawing people in clothes I wish I had, taking romantic bike rides by myself as the sun sets, and driving out to Sacramento to thrift for more clothes. Some things that I'm passionate about are Japanese street-fashion, providing free education, maintaining good health, Copic Markers, the future of technology, and of course - design.  </p>
 				<p>My favorite tools?
 					<ul>
 						<li>Adobe Photoshop and Illustrator</li>
