Dumb link mistake - Tumblr
My tumblr wasn’t linked properly

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
 			<div class="col-lg-8 col-lg-offset-2">
 				<h2>VICTORIA YUEN-RUAN</h2>
 				<p>Hello! I'm currently a design student at UC Davis exploring visual communication and experience design. I love creating graphics and hope to make the world less frustrating with one design solution at a time. </p>
-				<p>What are my Current goals? 
+				<p>What are my current goals? 
 					<ul>
 						<li>Understand the principles of human-centered design</li>
 						<li>Make a CSS animation!</li> 
@@ -75,7 +75,7 @@
 						<li>USE DESIGN FOR GOOD, AND NOT EVIL</li>
 					</ul>
 				</p>
-				<p>When I'm not attached to my laptop and external monitor, I spend my time drawing people in clothes I wish I had, taking romantic bike rides by myself as the sun sets, and driving out to Sacramento to thrift for more clothes. Some things that I'm passionate about are Japanese street-fashion, providing free education, maintaining good health, Copic Markers, the future of technology, and of course - design.  </p>
+				<p>When I'm not attached to my laptop and external monitor, I spend my time drawing people in clothes I wish I had, taking romantic bike rides by myself as the sun sets, and driving out to Sacramento to thrift for more clothes. Some things that I'm passionate about are Japanese street-fashion, providing free education, maintaining good health, Copic markers, the future of technology, and of course - design.  </p>
 				<p>My favorite tools?
 					<ul>
 						<li>Adobe Photoshop and Illustrator</li>
@@ -85,7 +85,7 @@
 						<li>Casa Okinawa Instant Milk Tea</li>
 					</ul>
 				</p>
-				<p>If you have any inquiries, feelings, need for a midnight burger run, please contact me at vyuenruan@ucdavis.edu</p>
+				<p>If you have any inquiries, feelings, need for a midnight burger run, please contact me at vyuenruan@ucdavis.edu. Thanks for stopping by!</p>
 
 			
 			</div>
