--- a/html/teaservice.html
+++ b/html/teaservice.html
@@ -115,7 +115,7 @@
 					<a href="https://www.linkedin.com/pub/victoria-yuen-ruan/58/776/5a4"><i class="fa fa-linkedin"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="thellamawentmeow.tumblr.com"><i class="fa fa-tumblr"></i></a>
+					<a href="http://thellamawentmeow.tumblr.com"><i class="fa fa-tumblr"></i></a>
 				</div>
 			
 			</div><!--/row -->
