--- a/html/clothingapp.html
+++ b/html/clothingapp.html
@@ -69,14 +69,14 @@
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h4>ABOUT THE PROJECT</h4>
-				<p> As someone who considers shopping and thrifting almost a way of life, my closet is pretty important to me. I have so much clothes that I try my best to wear all of them, but some are definitely more loved than others. I wanted to make this app for all who need an incentive to create outfits utilizing all their clothing options. It's a gamified organization tool to encourage creativity and hopefully less waste by having the user acknowledge how many clothing items they have and how often they wear them.</p>
+				<p> As someone who considers shopping and thrifting almost a way of life, my closet is pretty important to me. I have so much clothes that I try my best to wear all of them, but some are definitely more loved than others. My target audience is primarily those who need an incentive to create outfits utilizing all their clothing options. It's a gamified organization tool to encourage creativity and hopefully less waste by having the user acknowledge how many clothing items they have and how often they wear them.</p>
 				
 			</div>
 			<div class="grove">
 			<div class="col-lg-10 col-lg-offset-1 mt">
 				<img class="img-responsive" src="../assets/img/clothingapp/sketch1.jpg" alt="Photo of sketches for mobile application" > 
 				<br>
-				<p><strong>I apologize.</strong> I just realized I should have used a different lens when I took this picture. Woops. I was mostly playing around with what the interface would look like. The home screen would display the date and weather and clothing suggestions based on the weather. The difference between this and most common closet apps is that there are no photographs. All the clothing items are vector graphics. I want to be design an easily manipulated set of standard clothing items that can be placed on your avatar to represent you and your clothing items. The more outfits you make, the more points you gain. Points go toward getting customized clothing items since some items will be too difficult to make.</p>
+				<p><strong>I apologize.</strong> I just realized I should have used a different lens when I took this picture. Woops. I was mostly playing around with what the interface would look like. The home screen would display the date and weather and clothing suggestions based on the weather. The difference between this and most common closet apps is that there are no photographs. All the clothing items are vector graphics. I hope to design an easily manipulated set of standard clothing items that can be placed on your avatar to represent you and your clothing items. The more outfits you make, the more points you gain. Points go toward getting customized clothing items since some items will be too difficult to make.</p>
 				<br>
 				<img class="img-responsive" src="../assets/img/clothingapp/sketch2.jpg" alt="Another photo of sketches for mobile application">
 				<br>
@@ -107,7 +107,7 @@
 					<a href="https://www.linkedin.com/pub/victoria-yuen-ruan/58/776/5a4"><i class="fa fa-linkedin"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="thellamawentmeow.tumblr.com"><i class="fa fa-tumblr"></i></a>
+					<a href="http://thellamawentmeow.tumblr.com"><i class="fa fa-tumblr"></i></a>
 				</div>
 			
 			</div><!--/row -->
