--- a/html/herbarium.html
+++ b/html/herbarium.html
@@ -76,11 +76,11 @@
 			<div class="col-lg-10 col-lg-offset-1 mt">
 				<img class="img-responsive" src="../assets/img/herbarium/bioday.jpg" width="503" height="650" alt="Biodiversity Museum Day Poster Design"> 
 				<br>
-				<p><strong>The Biodiversity Museum Day</strong> is an event targeted towards families to encourage children to be involved in the sciences. On this day, 6 collections and museums open up at UC Davis and there are activities and tours to participate in. I wanted the poster to be kid-friendly and exciting with all the vibrant colors. I chose not incorporate the map of the locations on this poster, and have left it as a separate resource that can be printed and used on the day of the event. </p>
+				<p><strong>The Biodiversity Museum Day</strong> is an event targeted towards families to encourage children to be involved in the sciences. On this day, 6 collections and museums open up at UC Davis and there are activities and tours to participate in. I utilized vibrants colors and cute icons for a kid-friendly and exciting vibe. I chose not to incorporate the map of the locations on this poster, and have left it as a separate resource that can be printed and used on the day of the event. </p>
 				<br>
 				<img class="img-responsive" src="../assets/img/herbarium/teainvite.jpg" width="503" height="687.5" alt="Winter Tea at the Herbarium invitation design">
 				<br>
-				<p><strong>The Winter Botanical Tea</strong> is an annual event hosted by the Herbarium celebrating a different plant collection each year. I designed this with the intention of printing it as an invitation card to the friends of the Herbarium. In this iteration, I used the serifs font for an elegant look to match a mature audience that would be attending. The contrast with the bold sans serif "Winter Botanical Tea" is done for clarity. </p>
+				<p><strong>The Winter Botanical Tea</strong> is an annual event hosted by the Herbarium celebrating a different plant collection each year. I designed this with the intention of printing it as an invitation card to the friends of the Herbarium. In this iteration, I used the serif typefaces for an elegant look to appeal to the older demographic that would be attending. The contrast with the bold sans serif "Winter Botanical Tea" is done for clarity. </p>
 				<br>
 				<img class="img-responsive" src="../assets/img/herbarium/volunteersunday.jpg" alt="Facebook volunteer flyer for Herbarium"> 
 				<br>
