MINOR TYPO CHANGE

--- a/html/asa.html
+++ b/html/asa.html
@@ -70,7 +70,7 @@
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h4>ABOUT THE PROJECT</h4>
-				<p> I entered my first design contest and it was to design a poster for the 45th Anniversary celebration of the Asian American Studies department at UC Davis. Besides that information and the date of the event, I was given no othr information. I proceeded with making the poster and in my brainstorming phase, I wanted to emphasize the "45th Anniversary" aspect the most. I thought that a celebratory feel with vivid colors and geometric shapes that allude to origami folding would be a good representation of the ASA department. After submitting my design, I was notified that I was a semi-finalist and that I would be competing against one other designer to win the contest. In order to win, I had to rework my poster design.</p>
+				<p> I entered my first design contest and it was to design a poster for the 45th Anniversary celebration of the Asian American Studies department at UC Davis. Besides that information and the date of the event, I was given no other information. I proceeded with making the poster and in my brainstorming phase, I wanted to emphasize the "45th Anniversary" aspect the most. I thought that a celebratory feel with vivid colors and geometric shapes that allude to origami folding would be a good representation of the ASA department. After submitting my design, I was notified that I was a semi-finalist and that I would be competing against one other designer to win the contest. In order to win, I had to rework my poster design.</p>
 				
 			</div>
 			<div class="grove">
