--- a/html/teaservice.html
+++ b/html/teaservice.html
@@ -86,7 +86,7 @@
 				<br>
 				<p><strong>So I created a closed tea harvest and distrubtion cycle</strong> catering to the Davis, California community. Harvest and cultivation would take place on UC Davis land and can be utilized for research. When harvest is complete, those who've subscribed to the tea service can have their tea delivered by bike. Once the tea bags are used, they can be returned to the UC Davis facility for composting. </p>
 				<br>
-				<img class="img-responsive" src="../assets/img/tea/finalposter.jpg">
+				<a href="../assets/img/tea/finalposter.jpg"><img class="img-responsive" src="../assets/img/tea/finalposter.jpg"></a>
 				<br>
 				<p><strong>This poster brings together</strong> all the graphical elements I designed for my research paper. I presented it to a group of designers and community planners.  </p>
 				<br>
