New Llama Project//Link fix
I added a new project: Am I a Llama? I also fixed the Works link on the
individual project pages

--- a/html/amiallama.html
+++ b/html/amiallama.html
@@ -6,9 +6,9 @@
     <meta name="description" content="Design portoflio and works by Victoria Yuen-Ruan.">
     <meta name="keywords" content="graphic design, portfolio, web design, student, work" />
     <meta name="author" content="Victoria Yuen-Ruan">
-    <link rel="shortcut icon" href="../assets/ico/favicon.ico">
+    <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Victoria Yuen-Ruan | Tea in Davis</title>
+    <title>Victoria Yuen-Ruan | Am I a Llama</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
@@ -51,44 +51,37 @@
       </div>
     </div>
 
-
 	<div id="workwrap">
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<h4>Redesigning the teabag </h4>
-					<h1>Tea as a Service </h1>
-					<h4>Experience - Product</h4>
+					<h4>An educational website </h4>
+					<h1>Am I a llama?</h1>
+					<h4>Interactive - Web</h4>
 				</div>
 			</div><!--/row -->
 	    </div> <!-- /container -->
 	</div><!--/workwrap -->
+
+
 	
 	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h4>ABOUT THE PROJECT</h4>
-				<p> The objective for this project was to pick a commonly used item and to re-design it with sustainability in mind. I chose to re-design the teabag and to offer the tea as a service within a small local community like Davis. My full research and life cycle assessment of tea can be read here: <a href="http://goo.gl/FnNy0L">Rethinking and Redesigning the Disposable Teabag</a>.</p>
+				<p> The Aerospace Museum of California has a program where they hope to encourage young kids about the ages of 6 to 12 to get involved with STEM topics. I was asked to create a website that would engage this target audience in a STEM related topic. There was also the stipulation to make it work on an iPhone or tablet. The topic I chose? How to differentiate llamas alpacas. Check out the site here:<a href="http://vyuenruan.design117.com/artifact/final/index.html"> Am I a Llama?</a>
 				
 			</div>
 			<div class="grove">
 			<div class="col-lg-10 col-lg-offset-1 mt">
-				<img class="img-responsive" src="../assets/img/tea/materials.jpg" > 
+				<a href="../assets/img/llama/frontllama.png"><img class="img-responsive" src="../assets/img/llama/frontllama.png" alt="browser mock up landing page"> </a>
 				<br>
-				<p><strong>By identifying</strong> the different materials used in a disposable tea bag, I can assess which materials are not sustainable and should be removed from the final product. I noticed that most tea bags have an extensive amount of space for the tea leaves that go unused. The paper tag and string along with the stapled packaging is excessive. By removing the excessive elements and reducing the tea bag size, those resources will not have to end up at the local landfill. There is less convenience without the string, but depending on the dimensions, the bag can float in such a way that it can be pulled out. </p>
+				<p><strong>The landing page</strong> begins with Jimmy, the alpaca. Except Jimmy doesn't know what he is. The next few pages explore what an alpaca and llama are and how they are different. At the end, we are brought back to jimmy and a one question quiz for the user to respond to.   </p>
 				<br>
-				<img class="img-responsive" src="../assets/img/tea/process.jpg">
+				<a href="../assets/img/llama/mockllama.png"><img class="img-responsive" src="../assets/img/llama/mockllama.png" alt="other llama website page"></a>
 				<br>
-				<p><strong>What process does tea normally go through to get to the user?</strong> This is a chart I included in my research paper depicting the process from tea harvest in another country to eventually getting distributed to individual households. I found this process to be ineffective because of the high rate of emissions from having to do multiple forms of packaging and distribution overseas.</p>
-				<br>
-				<img class="img-responsive" src="../assets/img/tea/service.jpg">
-				<br>
-				<p><strong>So I created a closed tea harvest and distrubtion cycle</strong> catering to the Davis, California community. Harvest and cultivation would take place on UC Davis land and can be utilized for research. When harvest is complete, those who've subscribed to the tea service can have their tea delivered by bike. Once the tea bags are used, they can be returned to the UC Davis facility for composting. </p>
-				<br>
-				<a href="../assets/img/tea/finalposter.jpg"><img class="img-responsive" src="../assets/img/tea/finalposter.jpg"></a>
-				<br>
-				<p><strong>This poster brings together</strong> all the graphical elements I designed for my research paper. I presented it to a group of designers and community planners.  </p>
+				<p><strong> I intentionally made the website</strong> brief because I wanted to maintain interest in the kids without boring them. If I had more time I would animate illustrations, but with time constraints, I added hover effects to the buttons so that there was some sort of movement on each page.</p>
 				<br>
 
 			</div>
