--- a/html/photography.html
+++ b/html/photography.html
@@ -44,7 +44,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="../index.html">Home</a></li>
-            <li><a href="http://yuenruan.me/#works">Works</a></li>
+            <li><a href="http://yuenruan.me/index.html#works">Works</a></li>
             <li><a href="../about.html">About</a></li>   
           </ul>
         </div><!--/.nav-collapse -->
@@ -83,7 +83,7 @@
 				<br>
 				<a href="../assets/img/portraits/aman.jpg"><img class="img-responsive" src="../assets/img/portraits/aman.jpg" alt="photo of a friend somberly holding a chicken"></a>
 				<br>
-				<a href="../assets/img/portraits/amanda.jpg"><img class="img-responsive" src="../assets/img/portraits/amanda.jpg" alt="photo of a friend trying to walk a drink wanter out of a glass"></a>
+				<a href="../assets/img/portraits/amanda.jpg"><img class="img-responsive" src="../assets/img/portraits/amanda.jpg" alt="photo of a friend trying to walk while drinking out of a glass of water"></a>
 
 			</div>
 			</div>
