--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 			
 			<!-- Front page portfolio images go in the imgs/portfolio folder --> 
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+			<a href="html/amiallama.html"><img src="assets/img/portfolio/llama_myfolio.png" class="img-responsive"></a>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="html/herbarium.html"><img src="assets/img/portfolio/herbarium_myfolio.png" class="img-responsive"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
@@ -92,6 +95,7 @@
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="html/photography.html"><img src="assets/img/portfolio/allegra_myfolio.jpg" class="img-responsive"></a>
 			</div>	
+
 		</div><!--/row -->
 	</div><!--/container -->
 	
