Minor change to the about page
Updated my about page but really I just want to scrap this whole damn
thing. website2.0 coming soon <3

--- a/about.html
+++ b/about.html
@@ -71,8 +71,7 @@
 					<ul>
 						<li>Understand the principles of human-centered design</li>
 						<li>Make a CSS animation!</li> 
-						<li>Meet Sal Khan (I love Khanacademy *o*)</li>
-						<li>USE DESIGN FOR GOOD, AND NOT EVIL</li>
+						<li>Work for an organization with values I bellieve in (Hi, KhanAcademy *o*)</li>
 					</ul>
 				</p>
 				<p>When I'm not attached to my laptop and external monitor, I spend my time drawing people in clothes I wish I had, taking romantic bike rides by myself as the sun sets, and driving out to Sacramento to thrift for more clothes. Some things that I'm passionate about are Japanese street-fashion, providing free education, maintaining good health, Copic markers, the future of technology, and of course - design.  </p>
