Header Description fixup
Deleted weird breaking.
Added emphasis ~pizza~

--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
 				<div class="desktop-6 columns">
 					<p class="site-desc">
 						Victoria is a <strong>visual designer.</strong><br/>
-						She happily absorbs herself in designing <strong>beneficial</strong> and <br>
-						<strong> meaningful  experiences</strong> for target users. If, somehow, she's not <br>
-						questioning the design of everyday things (and systems), you can <br>
-						find her rolled up in <em>all</em> the plush blankets eating pizza.
+						She happily absorbs herself in designing <strong>beneficial</strong> and 
+						<strong> meaningful  experiences</strong> for target users. If, somehow, she's not 
+						questioning the design of everyday things (and systems), you can 
+						find her rolled up in <em>all</em> the plush blankets eating <strong>pizza</strong>.
 						
 					</p><!-- // .site-desc -->
 				</div><!-- // .desktop-6 -->
