--- a/groovysmoothies.html
+++ b/groovysmoothies.html
@@ -205,21 +205,20 @@
 	<section id="footer">
 		<div class="container">
 			<div class="desktop-3 columns">
-				<p>Copyright &copy; <a href="http://www.typebig.com" class="italic">Typebig</a></p>
+				<p>Victoria Yuen-Ruan &copy; 2016</p>
 			</div><!-- // .desktop-3 -->
 
 			<div class="desktop-9 columns">
 				<ul id="social">
-					<li><a href="http://www.facebook.com" class="hoverMe">Facebook</a></li>
-					<li><a href="http://www.twitter.com" class="hoverMe">Twitter</a></li>
-					<li><a href="http://www.google.com" class="hoverMe">Google+</a></li>
+					<li><a href="https://www.linkedin.com/in/victoria-yuen-ruan-5a477658" class="hoverMe">LinkedIn</a></li>
+					<li><a href="https://thellamawentmeow.tumblr.com" class="hoverMe">Tumblr</a></li>
+					<li><a href="https://twitter.com/yuenruan" class="hoverMe">Twitter</a></li>
 				</ul><!-- // #social -->
 			</div><!-- // .desktop-9 -->
 
 			<div class="clear"></div>
 		</div><!-- // .container -->
 	</section><!-- // section#footer -->
-
 
 	<!-- JS
 	================================================== -->
