--- a/loveletter.html
+++ b/loveletter.html
@@ -205,7 +205,7 @@
 			<div class="desktop-9 columns">
 				<ul id="social">
 					<li><a href="https://www.linkedin.com/in/victoria-yuen-ruan-5a477658" class="hoverMe">LinkedIn</a></li>
-					<li><a href="https://www.tumblr.com/blog/thellamawentmeow" class="hoverMe">Tumblr</a></li>
+					<li><a href="https://thellamawentmeow.tumblr.com" class="hoverMe">Tumblr</a></li>
 					<li><a href="https://twitter.com/yuenruan" class="hoverMe">Twitter</a></li>
 				</ul><!-- // #social -->
 			</div><!-- // .desktop-9 -->
