Making Content fat
Updated Resume link.
Added a poster to Graphics.
Updated Gubi description.

--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
 
 				<div class="desktop-6 columns">
 					<p class="site-desc"> 
-						Resumé: <a href="#"><strong>PDF Link</strong></a><br>
+						Resumé: <a href="http://bit.do/resumebyvictoria"><strong>PDF Link</strong></a><br>
 						Favorite Pizza: pan-friend pineapple and pepperoni with classic red sauce
 						Superpower: I'm never tired of eating pizza<br>
 						Languages: English, Chinese, "Spanish"
