--- a/graphics.html
+++ b/graphics.html
@@ -179,9 +179,10 @@
 
 			<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
-				<img src="images/letterforms.gif" alt="Photos of Letterforms made from clothing" /></a>
+				<img src="images/letterforms.gif" alt="Photos of Letterforms made from clothing" />
 				<img src="images/biodayposter.jpg" alt="Biodiversity Museum Day Poster" />
 				<img src="images/utilityposter.jpg" alt="Re-designed utility bill" />
+				<img src="images/teaposter.png" alt="Rethinking convenient tea poster"/>
 
 			</div><!-- // .desktop-9 -->
 
