--- a/gubi.html
+++ b/gubi.html
@@ -137,9 +137,8 @@
 							<h3 class="border-top">Gubi</h3>
 							<p class="project-desc">2016</p>
 
-							<p>Developing a brand identity for a gummy vitamin product called Gubi. 
-
-							 </p>
+							<p>Developing a brand identity for a gummy vitamin product called Gubi. </p>
+							<p> The target audience encompasses young, trendy, environmentally conscious females who may have children. There are both adult and children versions of the supplement so it's a full range service with sustainable packaging. </p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
