--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
 				<div class="desktop-6 columns">
 					<p class="site-desc"> 
 						Resumé: <a href="http://bit.do/resumebyvictoria" title="Open PDF Resumé"><strong>PDF Link</strong></a><br>
-						Favorite Pizza: pan-friend pineapple and pepperoni with classic red sauce
+						Favorite Pizza: pan-friend pineapple and pepperoni with classic red
 						Superpower: I'm never tired of eating pizza<br>
 						Languages: English, Chinese, "Spanish"
 					</p><!-- // .site-desc -->
