--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 
 				<div class="desktop-6 columns">
 					<p class="site-desc">
-						Victoria is a <strong>visual designer.</strong><br/>
-						She happily absorbs herself in designing <strong>beneficial</strong> and 
+						Victoria is a <strong>visual designer,</strong><br/>
+						experienced in designing <strong>beneficial</strong> and 
 						<strong> meaningful  experiences</strong> for target users. If, somehow, she's not 
 						questioning the design of everyday things (and systems), you can 
 						find her rolled up in <em>all</em> the plush blankets eating <strong>pizza</strong>.
